# codecopier

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: LangSwitcher.tsx
src/i18n/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  hi-IN.json  index.ts  it-IT.json  ja-JP.json  ko-KR.json  pl-PL.json  pt-BR.json  ru-RU.json  tr-TR.json  zh-CN.json  zh-HK.json
