# File: src-tauri/Cargo.toml
[package]
name = "code-copier"
version = "0.1.0"
description = "A fast desktop code file copier"
authors = ["local"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
